# Epola

./: README.md  meson.build  tte.nemas.Epola.json
data/: meson.build  tte.nemas.Epola.desktop.in  tte.nemas.Epola.gschema.xml  tte.nemas.Epola.metainfo.xml.in  tte.nemas.Epola.service.in
data/icons/: meson.build
po/: POTFILES.in  es.po  meson.build
src/: app_info.py  epola.gresource.xml  epola.in  main.py  managers.py  meson.build  style.css  window.py  window.ui
src/epola/: app_info.py  main.py  managers.py  style.css  window.py  window.ui
